@@ -1,6 +1,6 @@
 #pragma once
 
-bool create_database(const char* fp);
+void create_database(const char* fp);
 void reset_database();
-bool load_database(const char* fp);
+void load_database(const char* fp);
 void save_database(const char* fp);
